# NetSimulyzer-ns3-module

./: .clang-tidy  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  wscript
doc/source/: architecture.rst  areas.rst  buildings.rst  categorical-axis.rst  colors.rst  conf.py  decorations.rst  index.rst  linking-module.rst  logging-messages.rst  nodes.rst  numeric-axis.rst  numeric-data-categories.rst  numeric-data.rst  optional.rst  orchestrator.rst  quickstart.rst  series-collections.rst  series.rst  sinks.rst
doc/source/_static/: netsimulyzer-ns3-module-diagram.xml
examples/: CMakeLists.txt  application-state-trace-example.cc  ecdf-sink-example-netsimulyzer.cc  lena-radio-link-failure-netsimulyzer.cc  mobility-buildings-example.cc  outdoor-random-walk-example-netsimulyzer.cc  throughput-sink-example-netsimulyzer.cc  wifi-bianchi-netsimulyzer.cc  wscript
helper/: area-helper.cc  area-helper.h  building-configuration-container.cc  building-configuration-container.h  building-configuration-helper.cc  building-configuration-helper.h  logical-link-helper.cc  logical-link-helper.h  netsim-throughput-charting.cc  netsim-throughput-charting.h  node-configuration-container.cc  node-configuration-container.h  node-configuration-helper.cc  node-configuration-helper.h  throughput-sink-helper.cc  throughput-sink-helper.h
model/: building-configuration.cc  building-configuration.h  category-axis.cc  category-axis.h  category-value-series.cc  category-value-series.h  color-palette.cc  color-palette.h  color.cc  color.h  decoration.cc  decoration.h  ecdf-sink.cc  ecdf-sink.h  event-message.h  log-stream.cc  log-stream.h  logical-link.cc  logical-link.h  netsimulyzer-3D-models.h  netsimulyzer-ns3-compatibility.h  netsimulyzer-version.cc  netsimulyzer-version.h  node-configuration.cc  node-configuration.h  optional-types.h  optional.h  orchestrator.cc  orchestrator.h  rectangular-area.cc  rectangular-area.h  series-collection.cc  series-collection.h  state-transition-sink.cc  state-transition-sink.h  throughput-sink.cc  throughput-sink.h  value-axis.cc  value-axis.h  visualizer3d-variables.h  (+4 more)
test/: examples-to-run.py  netsimulyzer-test-utils.h  test-buildings.cc  test-node-events.cc  test-orchestrator-outputs.cc
